[gd_scene load_steps=34 format=3 uid="uid://c7c2xwv0ldlh2"]

[ext_resource type="Script" path="res://characters/battle_character.gd" id="1_qxmu1"]
[ext_resource type="Texture2D" uid="uid://p22ewmdirodp" path="res://art/Final/Normal Attack.png" id="2_ollde"]
[ext_resource type="Texture2D" uid="uid://cd555acarioba" path="res://art/Final/Idle and running.png" id="3_86nxv"]
[ext_resource type="Script" path="res://utils/components/sprite_component.gd" id="4_ktlyp"]
[ext_resource type="Script" path="res://utils/components/stat_component.gd" id="5_b4ykd"]
[ext_resource type="PackedScene" uid="uid://tpyden628vdc" path="res://spells/shoot/Shoot.tscn" id="6_8stvu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h3daf"]
atlas = ExtResource("2_ollde")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w1p8"]
atlas = ExtResource("2_ollde")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt0ut"]
atlas = ExtResource("2_ollde")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5fqb"]
atlas = ExtResource("2_ollde")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_psymr"]
atlas = ExtResource("2_ollde")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_85tvf"]
atlas = ExtResource("2_ollde")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_20knw"]
atlas = ExtResource("2_ollde")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhxrq"]
atlas = ExtResource("2_ollde")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdktv"]
atlas = ExtResource("2_ollde")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q4vo"]
atlas = ExtResource("2_ollde")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rwwe"]
atlas = ExtResource("2_ollde")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_36awr"]
atlas = ExtResource("3_86nxv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_53k6q"]
atlas = ExtResource("3_86nxv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5fjj"]
atlas = ExtResource("3_86nxv")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sb1w"]
atlas = ExtResource("3_86nxv")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhxh0"]
atlas = ExtResource("3_86nxv")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gurm"]
atlas = ExtResource("3_86nxv")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk0x8"]
atlas = ExtResource("3_86nxv")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_um5pb"]
atlas = ExtResource("3_86nxv")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eblfb"]
atlas = ExtResource("3_86nxv")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nugsb"]
atlas = ExtResource("3_86nxv")
region = Rect2(448, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rhcyd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3daf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w1p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt0ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5fqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psymr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85tvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20knw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhxrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdktv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q4vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rwwe")
}],
"loop": false,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36awr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w1p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53k6q")
}],
"loop": true,
"name": &"get_hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36awr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53k6q")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5fjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sb1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhxh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gurm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk0x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um5pb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eblfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nugsb")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_pvpa4"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.2333, 0.266667, 0.3, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.35]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Spellbook/Shoot")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}

[sub_resource type="Animation" id="Animation_id3sk"]
resource_name = "idle"
length = 0.0333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_2k0ht"]
resource_name = "run"
length = 0.2333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.2333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.495]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lc5g3"]
_data = {
"attack": SubResource("Animation_pvpa4"),
"idle": SubResource("Animation_id3sk"),
"run": SubResource("Animation_2k0ht")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sdhi5"]
radius = 6.0
height = 16.0

[node name="BattleCharacter" type="CharacterBody2D" node_paths=PackedStringArray("hitbox")]
script = ExtResource("1_qxmu1")
player_team = true
hitbox = NodePath("CollisionShape2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rhcyd")
animation = &"attack"
frame = 10
speed_scale = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_lc5g3")
}
speed_scale = 0.35

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_sdhi5")

[node name="SpriteComponent" type="Node" parent="." node_paths=PackedStringArray("Sprite", "animation_player", "target_node")]
script = ExtResource("4_ktlyp")
Sprite = NodePath("../AnimatedSprite2D")
animation_player = NodePath("../AnimatedSprite2D/AnimationPlayer")
target_size = 24
target_node = NodePath("..")

[node name="StatComponent" type="Node" parent="." node_paths=PackedStringArray("target_node")]
script = ExtResource("5_b4ykd")
base_max_hp = 40
base_max_ap = 6
base_max_mp = 3
initiative = 1
target_node = NodePath("..")

[node name="Spellbook" type="Node" parent="."]

[node name="Shoot" parent="Spellbook" node_paths=PackedStringArray("caster") instance=ExtResource("6_8stvu")]
caster = NodePath("../..")
